get updated api definition from backend
