# src/app/api/models.ts
@@ -1,3 +1,5 @@
+export { CreateSurveyQuestion } from './models/create-survey-question';
+export { CreateSurveyRequest } from './models/create-survey-request';
 export { ClientQuestion } from './models/client-question';
 export { ClientSurvey } from './models/client-survey';
 export { ClientAnswer } from './models/client-answer';
