# src/app/api/models/create-survey-question.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+
+/* eslint-disable */
+export interface CreateSurveyQuestion {
+  answerText?: string;
+  children?: Array<CreateSurveyQuestion>;
+  questionText?: string;
+}
